tests/parse/error_mdspan4.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_mdspan() {
  mds : [];
}

// CHECK: error: syntax error, unexpected ]
// CHECK-NOT: error:
